Refactor extraction pipeline into python script, add sample images

--- a/notebooks/03_explore_data.ipynb
+++ b/notebooks/03_explore_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "191516b2-7e13-4bae-a7ab-91381300d7bc",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,66 @@
     "import pandas as pd\n",
     "import os\n",
     "import requests\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from typing import Optional, List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "a6268b73-50d5-40b9-8c26-d68ef65064b6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "file_path = \"../data/raw/sky_conditions_20250815_20250901.json\"\n",
+    "\n",
+    "with open(file_path, 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "observations = data['results']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "90b3eb96-8e3e-47a0-9303-8fb359593ff8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PHOTO_KEYS = [\n",
+    "    \"skyconditionsNorthPhotoUrl\",\n",
+    "    \"skyconditionsSouthPhotoUrl\",\n",
+    "    \"skyconditionsEastPhotoUrl\",\n",
+    "    \"skyconditionsWestPhotoUrl\",\n",
+    "    \"skyconditionsUpwardPhotoUrl\"\n",
+    "]\n",
+    "\n",
+    "CLOUD_KEYS = [\n",
+    "    \"skyconditionsAltocumulus\",\n",
+    "    \"skyconditionsAltostratus\",\n",
+    "    \"skyconditionsCirrocumulus\",\n",
+    "    \"skyconditionsCirrostratus\",\n",
+    "    \"skyconditionsCirrus\",\n",
+    "    \"skyconditionsCumulonimbus\",\n",
+    "    \"skyconditionsCumulus\",\n",
+    "    \"skyconditionsNimbostratus\",\n",
+    "    \"skyconditionsStratocumulus\",\n",
+    "    \"skyconditionsStratus\"\n",
+    "]\n",
+    "\n",
+    "def is_jpg(url: Optional[str]) -> bool:\n",
+    "    return url and url[-4:] == '.jpg'\n",
+    "    \n",
+    "def has_jpg_photo(obs) -> bool:\n",
+    "    return any(is_jpg(obs.get(pk)) for pk in PHOTO_KEYS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e200a793-c9f5-4096-ac89-a61986ad96b1",
    "metadata": {
     "scrolled": true
    },
@@ -26,6 +79,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Observation count: 4409\n",
+      "Sample:\n",
       "{\n",
       "  \"protocol\": \"sky_conditions\",\n",
       "  \"measuredDate\": \"2025-09-01\",\n",
@@ -112,30 +167,53 @@
       "    \"skyconditionsSpray\": null,\n",
       "    \"skyconditionsHeavyRain\": null\n",
       "  }\n",
-      "}\n"
+      "}\n",
+      "4409\n"
      ]
     }
    ],
    "source": [
-    "file_path = \"../data/raw/sky_conditions_20250815_20250901.json\"\n",
+    "print(f'Observation count: {len(observations)}')\n",
+    "print(f'Sample:\\n{json.dumps(observations[0], indent=2)}')\n",
     "\n",
-    "with open(file_path, 'r') as f:\n",
-    "    data = json.load(f)\n",
-    "\n",
-    "observations = data['results']\n",
-    "# print(data.keys())\n",
-    "# print(data['count'])\n",
-    "# print(data['message'])\n",
-    "print(json.dumps(data['results'][0], indent=2))"
+    "# rows = []\n",
+    "# for obs in observations:\n",
+    "#     if not has_jpg_photo(obs):\n",
+    "#         continue\n",
+    "    \n",
+    "#     one_hot = {ct[13:].lower(): int(obs[ct] == 'true') for ct in cloud_types}\n",
+    "#     one_hot['pid'] = obs['pid']\n",
+    "    \n",
+    "#     data = obs['data']\n",
+    "#     for pk in PHOTO_KEYS:\n",
+    "#         photo_url = data.get(pk)\n",
+    "#         if not is_jpg(url):\n",
+    "#             continue\n",
+    "#         row = {'photo_url': photo_url, 'pid': obs['pid'], 'data_source':}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1eea92b9-7d5f-40f8-8dfe-77b80bdfc0d1",
+   "execution_count": 33,
+   "id": "403de0cf-cf29-49d6-b1dc-9bade73febc7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{None: 37057, True: 6963, False: 70}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {}\n",
+    "for obs in observations:\n",
+    "    for ck in CLOUD_KEYS:\n",
+    "        val = obs['data'].get(ck)\n",
+    "        d[val] = d.get(val, 0) + 1\n",
+    "print(d)"
+   ]
   }
  ],
  "metadata": {
